--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,3 +1,23 @@
-// Place all the styles related to the welcome controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+h1 {
+	color: red;
+}
+
+p#index-title {
+	text-align: center;
+	font-size: 2em;
+	color: blue;
+}
+
+.posts {
+	border: 1px solid;
+	margin: 5px;
+	padding: 5px;
+	height: 200px;
+}
+
+section {
+	background: #5998ff;
+	border: 5px solid;
+	margin: 5px;
+	padding: 5px;
+}
