--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,12 @@
 	</head>
 
 	<body>
-		<ul>
-			<li><%= link_to "Home", welcome_index_path %></li>
-			<li><%= link_to	"About", welcome_about_path %></li>
-		</ul>
+		<div class="container">
+			<ul class="nav nav-tabs">
+				<li><%= link_to "Home", welcome_index_path %></li>
+				<li><%= link_to	"About", welcome_about_path %></li>
+			</ul>
+		</div>
 
 		<%= yield %>
 
