--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Welcome to Bloccit</h1>
-<p>This is the home page for Bloccit.</p>
+<div class="container">
+	<h1>Welcome to Bloccit</h1>
+	<p>This is the home page for Bloccit.</p>
+</div>
+	
