--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
 	<body>
 		<div class="container">
 			<ul class="nav nav-tabs">
-				<li><%= link_to "Home", welcome_index_path %></li>
-				<li><%= link_to	"About", welcome_about_path %></li>
+				<li><%= link_to "Home", root_path %></li>
+				<li><%= link_to	"About", about_path %></li>
 			</ul>
 		</div>
 
