--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,28 @@
 				<li><%= link_to "Home", root_path %></li>
 				<li><%= link_to	"About", about_path %></li>
 			</ul>
+
+			<% if flash[:notice] %>
+				<div class="alert alert-success">
+					<button type="button" class="close" data-dismiss="alert">&times;</button>
+					<%= flash[:notice] %>
+				</div>
+			<% elsif flash[:error] %>
+				<div class="alert alert-danger">
+					<button type="button" class="close" data-dismiss="alert">&times;</button>
+					<%= flash[:error] %>
+				</div>
+			<% elsif flash[:alert] %>
+				<div class="alert">
+					<button type="button" class="close" data-dismiss="alert">&times;</button>
+					<%= flash[:alert] %>
+				</div>
+			<% end %>
+
+			<%= yield %>
 		</div>
 
-		<%= yield %>
+		
 
 	</body>
 </html>
