--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,14 @@
 			<ul class="nav nav-tabs">
 				<li><%= link_to "Home", root_path %></li>
 				<li><%= link_to	"About", about_path %></li>
+
+				<div class="pull-right user-info">
+					<% if current_user %>
+					  Hello <%= current_user.email %>! <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+					<% else %>
+					  <%= link_to "Sign In", new_user_session_path %> or <%= link_to "Sign Up", new_user_registration_path %>
+					<% end %>
+				</div>
 			</ul>
 
 			<% if flash[:notice] %>
