--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,10 @@
   		<h4 class="media-head">
   			<p><%= link_to post.title, post %></p>
   		</h4>
+  		<small>
+  			submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %><br />
+  			<%= post.comments.count %> Comments
+  		</small>
   	</div>
   </div>
 <% end %>
