Implemented Pundit and basic roles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
 					<%= flash[:error] %>
 				</div>
 			<% elsif flash[:alert] %>
-				<div class="alert">
+				<div class="alert alert-warning">
 					<button type="button" class="close" data-dismiss="alert">&times;</button>
 					<%= flash[:alert] %>
 				</div>
