--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,9 @@
 <h1><%= @post.title %></h1>
-<%= link_to "Edit", edit_post_path(@post), class: 'btn btn-primary' %>
+
+<% if policy(@post).edit? %>
+	<%= link_to "Edit Post", edit_post_path(@post), class: 'btn btn-success' %>
+<% end %>
+
 <p><%= @post.body %></p>
 
 	
