Cleaned up registration views and app layout

--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -17,6 +17,8 @@
 					<%= f.check_box :public %> Public topic
 				<% end %>
 			</div>
+			
+			<%= f.submit "Save", class: 'btn btn-success' %>
 		<% end %>
 	</div>
 </div>
