--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,20 +1,6 @@
 <h1>Edit Post</h1>
 <div class="row">
 	<div class="col-md-12">
-  	<%= form_for [@topic, @post] do |f| %>
-			<div class="form-group">
-				<%= f.label :title %>
-			  <%= f.text_field :title, class: "form-control", placeholder: "Enter post title" %>
-		  </div>
-
-		  <div class="form-group">
-		  	<%= f.label :body %>
-			  <%= f.text_area :body, class: "form-control", placeholder: "Enter post body" %>
-		  </div>
-			
-			<div class="form-group">
-				<%= f.submit "Save", class: "btn btn-primary" %>
-			</div>
-		<% end %>
+		<%= render partial: 'form', locals: { topic: @topic, post: @post } %>
   </div><!-- col-md-12 --> 
 </div>
