Installed and implemented Redcarpet for Markdown

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,9 @@
-<h1><%= @post.title %></h1>
+<h1><%= markdown @post.title %></h1>
 
 <% if policy(@post).edit? %>
 	<%= link_to "Edit Post", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
 <% end %>
 
-<p><%= @post.body %></p>
+<p><%= markdown @post.body %></p>
 
 	
