Added uploading images functionality but running into a nil error.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,19 @@
 <h1><%= markdown @post.title %></h1>
 
-<% if policy(@post).edit? %>
-	<%= link_to "Edit Post", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
-<% end %>
+<div class="row">
+	<div class="col-md-8">
+		<small>
+			<%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
+			submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
+		</small>
+		<p><%= markdown @post.body %></p>
+	</div>
 
-<p><%= markdown @post.body %></p>
+	<div class="col-md-4">
+		<% if policy(@post).edit? %>
+			<%= link_to "Edit Post", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
+		<% end %>
+	</div>
+</div>
 
 	
