--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -47,6 +47,19 @@
         <%= f.text_field :name, class: 'form-control', placeholder: "Enter your name", autofocus: true %>
       </div>
 
+      <% if current_user.avatar? %>
+        <div class="form-group">
+          <p>Current avatar</p>
+          <%= image_tag( current_user.avatar.profile.url ) %>
+        </div>
+      <% end %>
+
+      <div class="form-group">
+        <%= f.label :avatar %>
+        <%= f.file_field :avatar %>
+        <%= f.hidden_field :avatar_cache %>
+      </div>
+
       <div class="form-group">
         <%= f.submit "Update", class: 'btn btn-success' %>
       </div>
