--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,6 +7,7 @@
 			submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
 		</small>
 		<p><%= markdown @post.body %></p>
+		<p><%= image_tag(@post.image_url) if @post.image? %></p>
 	</div>
 
 	<div class="col-md-4">
