--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -28,5 +28,9 @@
 		<% if policy(Post.new).create? %>
 			<%= link_to "New Post", new_topic_post_path(@topic, @post), class: 'btn btn-success' %>
 		<% end %>
+
+		<% if policy(@topic).destroy? %>
+			<%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', confirm: "Are you sure you want to delete this topic?" %>
+		<% end %>
 	</div>
 </div>
