--- a/app/views/posts/_comments.html.erb
+++ b/app/views/posts/_comments.html.erb
@@ -1,10 +1,25 @@
 <h4><%= @comments.count %> Comments:</h4>
-<% if @comments.count > 0 %>
-	<% @comments.each do |comment| %>
-		<p>
-			<%= comment.body %><br />
-		</p>
+
+<div class="media">
+	<% if @comments.count > 0 %>
+		<% @comments.each do |comment| %>
+			<%= link_to '#', class: 'pull-left' do %>
+				<%# image_tag(comment.user(params[:user_id]).avatar.small.url) if comment.user.avatar? %>
+			<% end %>
+			<div class="media-body">
+				<small>
+					<%# comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
+					<%# if policy(comment).destroy? %>
+						| <%# link_to "Delete", [@topic, comment], method: :delete %>
+					<%# end %>
+				</small>
+				<p><%= comment.body %></p>
+			</div>
+		<% end %>
+	<% else %>
+		<p>No Comments</p>
 	<% end %>
-<% else %>
-	<p>No Comments</p>
-<% end %>
+</div>
+
+
+	
