--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,43 +5,21 @@
 	  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
 	  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 	  <%= csrf_meta_tags %>
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
 	<body>
-		<div class="container">
-			<ul class="nav nav-tabs">
-				<li><%= link_to "Home", root_path %></li>
-				<li><%= link_to	"About", about_path %></li>
 
-				<div class="pull-right user-info">
-					<% if current_user %>
-						<%= image_tag(current_user.avatar.tiny.url) if current_user.avatar? %>
-					  Hello <%= link_to (current_user.name || current_user.email), edit_user_registration_path %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
-					<% else %>
-					  <%= link_to "Sign In", new_user_session_path %> or <%= link_to "Sign Up", new_user_registration_path %>
-					<% end %>
-				</div>
-			</ul>
+		<% if current_page?(root_path) %>
+			<%= render partial: 'layouts/home_landing' %>
+		<% else %>
+			<%= render partial: 'layouts/nav' %>
+		<% end %> 
 
-			<% if flash[:notice] %>
-				<div class="alert alert-success">
-					<button type="button" class="close" data-dismiss="alert">&times;</button>
-					<%= flash[:notice] %>
-				</div>
-			<% elsif flash[:error] %>
-				<div class="alert alert-danger">
-					<button type="button" class="close" data-dismiss="alert">&times;</button>
-					<%= flash[:error] %>
-				</div>
-			<% elsif flash[:alert] %>
-				<div class="alert alert-warning">
-					<button type="button" class="close" data-dismiss="alert">&times;</button>
-					<%= flash[:alert] %>
-				</div>
-			<% end %>
+		<!-- Page Content --> 
 
-			<%= yield %>
-		</div>
+		<%= yield %>
+		
 
 		
 
