--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,24 +1,74 @@
-<div class="jumbotron">
-	<h1>Bloccit</h1>
-	<p>Bloccit is a resource for sharing links with your friends!</p>
-	<p>
-		<%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
-	</p>
+<div id="home-content-explanation">
+	<!-- After Landing Page Intro --> 
+	<div class="container">
+		<div class="row">
+			<div class="calendar">
+
+				<!-- Image on the left side --> 
+				<div class="col-md-3">
+					<div class="calendar-wrapper">
+						<%= image_tag("calendar.png")  %>
+					</div>
+				</div>
+
+				<!-- Content on the right side --> 
+				<div class="col-md-9">
+					<h3>New Training Every Week</h3>
+					<p>Every Wednesday you will receive an email or visit the site to receive a new training video.  They will be quick and easy to implement as well as make you better at what you do. </p>
+				</div>
+			</div>
+		</div><!-- .row --> 
+
+		<div class="row">
+			<div class="feedback">
+				
+				<!-- Content on the left side --> 
+				<div class="col-md-9">
+					<h3>You Choose the Topics</h3>
+					<p>Is there something specific you want to learn? Once you sign up you can simply post it or upvote what others have suggested.  Whatever has the most upvotes is what I will work on for the next weeks training.</p>
+				</div>
+
+				<!-- Image on the right side --> 
+				<div class="col-md-3">
+					<div class="feedback-wrapper">
+						<%= image_tag "message-box.png" %>
+					</div>
+				</div>
+			</div>
+		</div><!-- .row --> 
+
+		<div class="row">
+			<div class="topics">
+				
+				<!-- Image on the left side --> 
+				<div class="col-md-3">
+					<div class="topics-wrapper">
+						<%= image_tag "website.png" %>
+					</div>
+				</div>
+
+				<!-- Content on the right side --> 
+				<div class="col-md-9">
+					<h3>More than Just Rails</h3>
+					<p>To create a successful website you need to know more than just rails.  That is why training will cover more than just rails.  It will include topics such as web usability, web design, and being a successful online entrepreneur.</p>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
-<div class="row">
-	<div class="col-md-4">
-		<h2>Solves world hunger</h2>
-		<p>Bloccit will deliver food and water to those in need, all over the world.</p>
-	</div>
+<div id="home-call-to-action-strip">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8">
+				<p>Sign up now to set yourself and your websites apart.</p>
+			</div>
 
-	<div class="col-md-4">
-		<h2>Eliminates poverty</h2>
-		<p>Bloccit will deliver money and education to those in need, all over the world.</p>
-	</div>
-
-	<div class="col-md-4">
-		<h2>Makes you better looking</h2>
-		<p>Bloccit will make you better looking: it's scientifically proven to make men look like Ryan Gosling and women like Shakira.</p>
+			<div class="col-md-4">
+				<%= link_to "Begin Training", new_user_registration_path %>
+			</div>
+		</div>
 	</div>
 </div>
+	
+	
