--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Edit Post</h1>
-<div class="row">
-	<div class="col-md-12">
-		<%= render partial: 'form', locals: { topic: @topic, post: @post } %>
-  </div><!-- col-md-12 --> 
+<div class="container">
+	<h1>Edit Post</h1>
+	<div class="row">
+		<div class="col-md-12">
+			<%= render partial: 'form', locals: { topic: @topic, post: @post } %>
+	  </div><!-- col-md-12 --> 
+	</div>
+
 </div>
