--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,7 +1,4 @@
-
-<h1>About Bloccit</h1>
-<p>Created by <%= link_to "Lauralee Flores", "http://www.lauraleeflores.com" %></p>
-
-	
-
-
+<div class="container">
+	<h1>About Bloccit</h1>
+	<p>Created by <%= link_to "Lauralee Flores", "http://www.lauraleeflores.com" %></p>
+</div>
