--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,73 +1,76 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+  <div class="container">
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<div class="row">
-  <div class="col-md-12">
-    <h3>Change email or password</h3>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-      <%= devise_error_messages! %>
-      <div class="form-group">
-        <%= f.label :email %>
-        <%= f.email_field :email, class: 'form-control', placeholder: "Enter email" %>
-      </div>
-
-      <!-- Unconfirmed Account --> 
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+  <div class="row">
+    <div class="col-md-12">
+      <h3>Change email or password</h3>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= devise_error_messages! %>
         <div class="form-group">
-          <p>Waiting confirmation for:</p>
-          <%= resource.unconfirmed_email %>
+          <%= f.label :email %>
+          <%= f.email_field :email, class: 'form-control', placeholder: "Enter email" %>
+        </div>
+
+        <!-- Unconfirmed Account --> 
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div class="form-group">
+            <p>Waiting confirmation for:</p>
+            <%= resource.unconfirmed_email %>
+          </div>
+        <% end %>
+
+        <!-- Confirmed Account --> 
+        <div class="form-group">
+          <%= f.label :password %>
+          <%= f.password_field :password, class: 'form-control', placeholder: "Enter new password", autocomplete: "off" %>
+          <i>(leave blank if you don't want to change it)</i>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Enter new password confirmation", autocomplete: "off" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.password_field :current_password, class: 'form-control', placeholder: "Enter password", autocomplete: "off" %>
+          <i>(we need your current password to confirm your changes)</i>
+        </div>
+
+        <div class="form-group">
+          <%= f.submit "Update", class: 'btn btn-success' %>
         </div>
       <% end %>
 
-      <!-- Confirmed Account --> 
-      <div class="form-group">
-        <%= f.label :password %>
-        <%= f.password_field :password, class: 'form-control', placeholder: "Enter new password", autocomplete: "off" %>
-        <i>(leave blank if you don't want to change it)</i>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Enter new password confirmation", autocomplete: "off" %>
-      </div>
-
-      <div class="form-group">
-        <%= f.password_field :current_password, class: 'form-control', placeholder: "Enter password", autocomplete: "off" %>
-        <i>(we need your current password to confirm your changes)</i>
-      </div>
-
-      <div class="form-group">
-        <%= f.submit "Update", class: 'btn btn-success' %>
-      </div>
-    <% end %>
-
-    <h3>Edit Personal Information</h3>
-    <%= form_for(current_user) do |f| %>
-      <div class="form-group">
-        <%= f.label :name %>
-        <%= f.text_field :name, class: 'form-control', placeholder: "Enter your name", autofocus: true %>
-      </div>
-
-      <% if current_user.avatar? %>
+      <h3>Edit Personal Information</h3>
+      <%= form_for(current_user) do |f| %>
         <div class="form-group">
-          <p>Current avatar</p>
-          <%= image_tag( current_user.avatar.profile.url ) %>
+          <%= f.label :name %>
+          <%= f.text_field :name, class: 'form-control', placeholder: "Enter your name", autofocus: true %>
+        </div>
+
+        <% if current_user.avatar? %>
+          <div class="form-group">
+            <p>Current avatar</p>
+            <%= image_tag( current_user.avatar.profile.url ) %>
+          </div>
+        <% end %>
+
+        <div class="form-group">
+          <%= f.label :avatar %>
+          <%= f.file_field :avatar %>
+          <%= f.hidden_field :avatar_cache %>
+        </div>
+
+        <div class="form-group">
+          <%= f.submit "Update", class: 'btn btn-success' %>
         </div>
       <% end %>
 
+      <h3>Cancel my account</h3>
       <div class="form-group">
-        <%= f.label :avatar %>
-        <%= f.file_field :avatar %>
-        <%= f.hidden_field :avatar_cache %>
+        <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
       </div>
+    </div><!-- div.col-md-12 --> 
+  </div><!-- div.row --> 
 
-      <div class="form-group">
-        <%= f.submit "Update", class: 'btn btn-success' %>
-      </div>
-    <% end %>
-
-    <h3>Cancel my account</h3>
-    <div class="form-group">
-      <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
-    </div>
-  </div><!-- div.col-md-12 --> 
-</div><!-- div.row --> 
+  </div>
