--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,41 +1,44 @@
-<h2>Sign up</h2>
+	<div class="container">
+		<h2>Sign up</h2>
 
-<div class="row">
-	<div class="col-md-12">
-		<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-		  <%= devise_error_messages! %>
-		  <div class="form-group">
-		  	<%= f.label :name %>
-		  	<%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: "Enter name" %>
-		  </div>
+	<div class="row">
+		<div class="col-md-12">
+			<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+			  <%= devise_error_messages! %>
+			  <div class="form-group">
+			  	<%= f.label :name %>
+			  	<%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: "Enter name" %>
+			  </div>
 
-		  <div class="form-group">
-		  	<%= f.label :email %>
-		  	<%= f.email_field :email, class: 'form-control', placeholder: "Enter your email" %>
-		  </div>
+			  <div class="form-group">
+			  	<%= f.label :email %>
+			  	<%= f.email_field :email, class: 'form-control', placeholder: "Enter your email" %>
+			  </div>
 
-		  <div class="form-group">
-		  	<%= f.label :password %>
-		  	<%= f.password_field :password, autocomplete: "off", class: 'form-control', placeholder: "Enter your password" %>
-		  </div>
+			  <div class="form-group">
+			  	<%= f.label :password %>
+			  	<%= f.password_field :password, autocomplete: "off", class: 'form-control', placeholder: "Enter your password" %>
+			  </div>
 
-		  <div class="form-group">
-		  	<%= f.label :password %>
-		  	<%= f.password_field :password, autocomplete: "off", class: 'form-control', placeholder: "Confirm your password" %>
-		  </div>
+			  <div class="form-group">
+			  	<%= f.label :password %>
+			  	<%= f.password_field :password, autocomplete: "off", class: 'form-control', placeholder: "Confirm your password" %>
+			  </div>
 
-		  <div class="form-group">
-		  	<%= f.submit "Sign up", class: 'btn btn-primary' %>
-		  </div>
+			  <div class="form-group">
+			  	<%= f.submit "Sign up", class: 'btn btn-primary' %>
+			  </div>
 
-		  <div class="form-group">
-		  	<%= render "devise/shared/links" %>
-		  </div>
-	  <% end %>
+			  <div class="form-group">
+			  	<%= render "devise/shared/links" %>
+			  </div>
+		  <% end %>
+		</div>
 	</div>
-</div>
-		
+			
 
 
 
 
+
+	</div>
