--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,8 @@
-<h1>Add a New Post</h1>
-<div class="row">
-	<div class="col-md-12">
-  	<%= render partial: 'form', locals: { topic: @topic, post: @post } %>
-  </div><!-- col-md-12 --> 
-</div><!-- row --> 
+<div class="container">
+	<h1>Add a New Post</h1>
+	<div class="row">
+		<div class="col-md-12">
+	  	<%= render partial: 'form', locals: { topic: @topic, post: @post } %>
+	  </div><!-- col-md-12 --> 
+	</div><!-- row --> 
+</div>
