--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,25 +1,28 @@
-<h1>Topics</h1>
+<div class="container">
+	<h1>Topics</h1>
 
-<div class="row">
-	<div class="col-md-8">
-		<% @topics.each do |topic| %>
-		<div class="media">
-			<div class="media-body">
-				<h4 class="media-heading">
-					<%= link_to topic.name, topic %>
-				</h4>
-				<small>
-					<%= topic.description %>
-				</small>
+	<div class="row">
+		<div class="col-md-8">
+			<% @topics.each do |topic| %>
+			<div class="media">
+				<div class="media-body">
+					<h4 class="media-heading">
+						<%= link_to topic.name, topic %>
+					</h4>
+					<small>
+						<%= topic.description %>
+					</small>
+				</div>
 			</div>
+			<% end %>
+			<%= will_paginate @topics %>
 		</div>
-		<% end %>
-		<%= will_paginate @topics %>
+
+		<div class="col-md-4">
+			<% if policy(Topic.new).create? %>
+				<%= link_to "New Topic", new_topic_path, class: 'btn btn-success' %>
+			<% end %>
+		</div>
 	</div>
 
-	<div class="col-md-4">
-		<% if policy(Topic.new).create? %>
-			<%= link_to "New Topic", new_topic_path, class: 'btn btn-success' %>
-		<% end %>
-	</div>
 </div>
