--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the Posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "welcome.css.scss";
+
+/* Voting
+================================================== */
+div.voting-wrapper {
+	width: 40px;
+	text-align: center;
+}
