--- a/app/views/votes/_voter.html.erb
+++ b/app/views/votes/_voter.html.erb
@@ -1,13 +1,13 @@
 <% if policy(Vote.new).create? %>
 	<div class="voting-wrapper pull-left">
 		<div>
-			<%= link_to " ", topic_post_up_vote_path(topic, post), class: 'glyphicon glyphicon-chevron-up' %>
+			<%= link_to " ", topic_post_up_vote_path(topic, post), class: "glyphicon glyphicon-chevron-up #{current_user.voted(post) && current_user.voted(post).up_vote? ? 'voted' : '' }" %>
 		</div>
 		<div>
 			<strong><%= post.points %></strong>
 		</div>
 		<div>
-			<%= link_to " ", topic_post_down_vote_path(topic, post), class: 'glyphicon glyphicon-chevron-down' %>
+			<%= link_to " ", topic_post_down_vote_path(topic, post), class: "glyphicon glyphicon-chevron-down #{(current_user.voted(post) && current_user.voted(post).down_vote?) ? 'voted' : '' }" %>
 		</div>
 	</div>
 <% end %>
