Created User Profile

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<h4><%= @comments.count %> Comments:</h4>
+<h4><%# @comments.count %> Comments:</h4>
 
 <div class="media">
 	<% if @comments.count > 0 %>
