--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -37,6 +37,12 @@
         </div>
 
         <div class="form-group">
+          <%= f.label :email_favorites %>
+          <%= f.check_box :email_favorites %>
+          <p class="help-block">Be notified for new comments on your favorites.</p>
+        </div>
+
+        <div class="form-group">
           <%= f.submit "Update", class: 'btn btn-success' %>
         </div>
       <% end %>
