--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,7 +11,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<% if current_user %>
 					<li>
-						<%= link_to (edit_user_registration_path) do %>
+						<%= link_to (current_user) do %>
 							<%= image_tag(current_user.avatar.tiny.url) if current_user.avatar? %> <%= (current_user.name || current_user.email)  %>
 						<% end %>
 					</li>
