--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,10 @@
 		<!-- Page Content --> 
 
 		<%= yield %>
-		
 
+		<div class="container">
+			<%= debug(params) if Rails.env.development? %>
+		</div>
 		
-
 	</body>
 </html>
