--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,17 +46,7 @@
 				</div>
 				<div class="tab-pane" id="comments">
 					Comments: 
-					<%= @user.comments.count %>
-					<% @user.comments.each do |comment| %>
-						<p><%= comment.body %></p>
-						<small>
-							<%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
-							<% if policy(comment).destroy? %>
-								| <%= link_to "Delete", comment_url_helper(comment), method: :delete %>
-							<% end %>
-						</small>
-					<% end %>
-					<%# render @user.comments %>
+					<%= render @comments %>
 				</div>
 			</div>
 		</div>
