Created Popular Posts and Users, and optimized topcs#show with eager loading.

--- a/app/views/layouts/_home_landing.html.erb
+++ b/app/views/layouts/_home_landing.html.erb
@@ -5,7 +5,7 @@
 		<div class="intro-text">
 			<h1>Bloccit</h1>
 			<h2>Bloccit is a resource for sharing links with your friends!</h2>
-			<%= link_to "See Topics", topics_path, class: "ghost-button" %>
+			<%= link_to "See What's Popular", posts_path, class: "ghost-button" %>
 		</div>
 
 	</div>
