--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,6 +15,7 @@
 				<div class="col-md-9">
 					<h3>New Training Every Week</h3>
 					<p>Every Wednesday you will receive an email or visit the site to receive a new training video.  They will be quick and easy to implement as well as make you better at what you do. </p>
+					<%= link_to "See All Topics", topics_path %>
 				</div>
 			</div>
 		</div><!-- .row --> 
@@ -26,6 +27,7 @@
 				<div class="col-md-9">
 					<h3>You Choose the Topics</h3>
 					<p>Is there something specific you want to learn? Once you sign up you can simply post it or upvote what others have suggested.  Whatever has the most upvotes is what I will work on for the next weeks training.</p>
+					<%= link_to "See Active Users", users_path %>
 				</div>
 
 				<!-- Image on the right side --> 
