--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -27,7 +27,7 @@
 
 			<%= render partial: 'comments/form', locals: { topic: @topic, post: @post, comment: @comment } %>
 
-			<%= render partial: 'comments/comment', locals: { post: @post, comments: @comments } %>
+			<%= render partial: 'comments/comment', collection: @comments %>
 		</div>
 
 		<div class="col-md-4">
