--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
-<h4><%= @comments.count %> Comments:</h4>
+<h4 class='js-comments-count'><%= @comments.count %> Comments:</h4>
 
 <div class="media">
-	<% if @comments.count > 0 %>
+	<% if @comments.count >= 1 %>
 		<% @comments.each do |comment| %>
 			<%= content_tag :div, class: 'media', id: "comment-#{comment.id}" do %>
 				<%= link_to '#', class: 'pull-left' do %>
@@ -11,7 +11,7 @@
 					<small>
 						<%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
 						<% if policy(comment).destroy? %>
-							| <%= link_to "Delete", comment_url_helper(comment), method: :delete %>
+							| <%= link_to "Delete", comment_url_helper(comment), method: :delete, remote: true %>
 						<% end %>
 					</small>
 					<p><%= comment.body %></p>
