--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,9 +8,12 @@
 		<h4 class="media-heading">
 			<%= link_to (markdown post.title), [post.topic, post] %>
 		</h4>
+		<p>
+			<%= post.description %>
+		</p>
 		<small>
-			<%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %> submitted <%= time_ago_in_words(post.created_at) %> ago by <%= link_to post.user.name, post.user %><br />
-			<%= post.comments.count %> Comments
+			<%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %> submitted <%= time_ago_in_words(post.created_at) %> ago by <%= link_to post.user.name, post.user %>
+			<%= post.comments.count %> Comments, <%= post.votes.count %> Likes
 		</small>
 	</div>
 </div>
