updated suggestions controller and added views for each.

--- a/app/views/suggestions/edit.html.erb
+++ b/app/views/suggestions/edit.html.erb
@@ -1,2 +1,7 @@
-<h1>Suggestions#edit</h1>
-<p>Find me in app/views/suggestions/edit.html.erb</p>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+			<%= render partial: 'form', locals: { suggestion: @suggestion } %>
+		</div>
+	</div>
+</div>
