--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Suggestions#show</h1>
-<p>Find me in app/views/suggestions/show.html.erb</p>
+<div class="container">
+	<div class="row">
+		<h1><%= @suggestion.title %></h1>
+		<p><%= @suggestion.body %></p>
+	</div>
+</div>
