--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Suggestions#index</h1>
-<p>Find me in app/views/suggestions/index.html.erb</p>
+<div class="container">
+	<div class="row">
+		<h1>All Suggestions</h1>
+		<% @suggestions.each do |s| %>
+			<p>
+				<%= link_to s.title, s %>
+				<small>
+					submitted <%= time_ago_in_words(s.created_at) %> ago by 
+				</small>
+			</p>
+				
+		<% end %>
+	</div>
+</div>
