--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
 
 		<%= yield %>
 
+		<%= render partial: 'layouts/footer' %>
+
 		<div class="container">
 			<%= debug(params) if Rails.env.development? %>
 		</div>
