--- a/app/views/layouts/_home_landing.html.erb
+++ b/app/views/layouts/_home_landing.html.erb
@@ -11,3 +11,9 @@
 	</div>
 
 </div><!-- .home-header -->
+
+
+<!--
+	<h1>Got a Business Idea?</h1>
+	<h2>Put it up online.  I'll show you how.</h2>
+-->
