--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,32 +1,38 @@
 <!-- Navigation Bar --> 
-	<div class="container-fluid">
-		<%= render partial: 'layouts/flash' %>
-		
-		<ul class="nav navbar-nav navbar-left">
-			<li><%= link_to "Home", root_path %></li>
-			<li><%= link_to	"About", about_path %></li>
-		</ul>
+<%= render partial: 'layouts/flash' %>
 
-		<div class="nav navbar-nav navbar-right">
-			<ul class="nav navbar-nav navbar-right">
-				<% if current_user %>
-					<li>
-						<%= link_to (current_user) do %>
-							<%= image_tag(current_user.avatar.tiny.url) if current_user.avatar? %> <%= (current_user.name || current_user.email)  %>
-						<% end %>
-					</li>
-					<li>
-						<%= link_to "Sign out", destroy_user_session_path, method: :delete %>
-					</li>
-				<% else %>
-					<li>
-						<%= link_to "Sign In", new_user_session_path %> 
-					</li>
-					<li>
-						<%= link_to "Sign Up", new_user_registration_path %>
-					</li>
-				  
-				<% end %>
-			</ul>	
+<nav class="navbar navbar-default" role="navigation">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to "R", root_path, class: "navbar-brand", id: "logo" %>
 		</div>
-	</div> <!-- .container --> 
+
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav" id="top-nav">
+				
+				<li class='<%= "nav #{'active' if current_page?(posts_path)}" %>'><%= link_to "Training", posts_path %></li>
+				<li class='<%= "nav #{'active' if current_page?(suggestions_path)}" %>'><%= link_to "Suggestions", suggestions_path %></li>
+				<li class='<%= "nav #{'active' if current_page?(users_path)}" %>'><%= link_to "Active Users", users_path %></li>
+			</ul>
+
+			<ul class="nav navbar-nav navbar-right" id="blocipedia-nav">
+				<% if current_user %>
+					<li class='<%= "nav #{'active' if current_page?(edit_user_registration_path)}" %>'><%= link_to (if current_user.name.present? then current_user.name else current_user.email end), edit_user_registration_path %></li>
+					<!-- Shorter way of doing this is: current_user.name.present? ? current_user.name : current_user.email --> 
+					<li class='<%= "nav #{'active' if current_page?(destroy_user_session_path)}" %>'><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+				<% else %>
+					<li class='<%= "nav #{'active' if current_page?(new_user_session_path)}" %>'><%= link_to "Sign In", new_user_session_path %></li>
+					<li class='<%= "nav #{'active' if current_page?(new_user_registration_path)}" %>'><%= link_to	"Sign Up", new_user_registration_path %></li>
+				<% end %>
+			</ul>
+		</div>
+
+
+	</div>
+</nav>
