--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 		<%= render partial: 'layouts/footer' %>
 
 		<div class="container">
-			<%= debug(params) if Rails.env.development? %>
+			<%# debug(params) if Rails.env.development? %>
 		</div>
 		
 	</body>
