--- a/app/views/suggestions/edit.html.erb
+++ b/app/views/suggestions/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="body">
 	<div class="row">
 		<div class="col-md-12">
 			<%= render partial: 'form', locals: { suggestion: @suggestion } %>
