--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="body">
 	<div class="row">
 		<h1>All Suggestions</h1>
 		<% @suggestions.each do |s| %>
