--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="body">
 	<div class="row">
 		<h1><%= @suggestion.title %></h1>
 		<p><%= @suggestion.body %></p>
