--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="body">
 	<%= render partial: 'votes/voter', locals: { topic: @topic, post: @post } %>
 	<h1><%= markdown @post.title %></h1>
 
