--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="body">
 	<h1>About Bloccit</h1>
 	<p>Created by <%= link_to "Lauralee Flores", "http://www.lauraleeflores.com" %></p>
 </div>
