--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div id="home-content-explanation">
 	<!-- After Landing Page Intro --> 
-	<div class="container">
+	<div class="container" id="body">
 		<div class="row">
 			<div class="calendar">
 
