--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,9 +1,8 @@
-  <div class="container">
-    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container" id="form">
+  <h2>Edit Your Account</h2>
 
   <div class="row">
     <div class="col-md-12">
-      <h3>Change email or password</h3>
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= devise_error_messages! %>
         <div class="form-group">
@@ -37,9 +36,8 @@
         </div>
 
         <div class="form-group">
-          <%= f.label :email_favorites %>
           <%= f.check_box :email_favorites %>
-          <p class="help-block">Be notified for new comments on your favorites.</p>
+          <%= f.label :email_favorites, "Be notified of new comments on your favorited posts." %>
         </div>
 
         <div class="form-group">
@@ -51,7 +49,7 @@
       <%= form_for(current_user) do |f| %>
         <div class="form-group">
           <%= f.label :name %>
-          <%= f.text_field :name, class: 'form-control', placeholder: "Enter your name", autofocus: true %>
+          <%= f.text_field :name, class: 'form-control', placeholder: "Enter your name" %>
         </div>
 
         <% if current_user.avatar? %>
