--- a/app/views/layouts/_home_landing.html.erb
+++ b/app/views/layouts/_home_landing.html.erb
@@ -3,9 +3,9 @@
 <div class="home-header">
 	<div class="container">
 		<div class="intro-text">
-			<h1>Bloccit</h1>
-			<h2>Bloccit is a resource for sharing links with your friends!</h2>
-			<%= link_to "See What's Popular", posts_path, class: "ghost-button" %>
+			<h1>Make Your Website More Successful</h1>
+			<h2>Get tips, tricks, training, and resources to help you succeed.</h2>
+			<%= link_to "I'm Interested, Tell Me More", new_user_registration_path %>
 		</div>
 
 	</div>
