--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,8 +14,8 @@
 				<!-- Content on the right side --> 
 				<div class="col-md-9">
 					<h3>New Training Every Week</h3>
-					<p>Every Wednesday you will receive an email or visit the site to receive a new training video.  They will be quick and easy to implement as well as make you better at what you do. </p>
-					<%= link_to "See All Topics", topics_path %>
+					<p>Every week receive a new training video.  They will be quick and easy to implement as well as make your website, your knowledge, and your skills better and more effective. Access any of the previous trainings as many times or whenever you want.</p>
+					<%# link_to "See All Topics", topics_path %>
 				</div>
 			</div>
 		</div><!-- .row --> 
@@ -26,8 +26,8 @@
 				<!-- Content on the left side --> 
 				<div class="col-md-9">
 					<h3>You Choose the Topics</h3>
-					<p>Is there something specific you want to learn? Once you sign up you can simply post it or upvote what others have suggested.  Whatever has the most upvotes is what I will work on for the next weeks training.</p>
-					<%= link_to "See Active Users", users_path %>
+					<p>Is there something specific you want to learn? Do you need help in a certain area? Once you sign up you can simply post it or upvote what others have suggested.  Whatever has the most upvotes is what I will work on for the next weeks training.</p>
+					<%# link_to "See Active Users", users_path %>
 				</div>
 
 				<!-- Image on the right side --> 
@@ -51,8 +51,12 @@
 
 				<!-- Content on the right side --> 
 				<div class="col-md-9">
+					<h3>Personalized Help and Consulting</h3>
+					<p>Do you have a question or problem that you need help with?  Get personalized help so thta you're never stuck.</p>
+					<!-- 
 					<h3>More than Just Rails</h3>
 					<p>To create a successful website you need to know more than just rails.  That is why training will cover more than just rails.  It will include topics such as web usability, web design, and being a successful online entrepreneur.</p>
+				--> 
 				</div>
 			</div>
 		</div>
